<resources>
    <string name="app_name">QieyouMerchantHD</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="tour_server_phone">400-885-7171</string>
    <string name="complete">完成</string>
    <string name="positive">确定</string>
    <string name="navitive">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="version_failed">获取失败</string>
    <string name="rmb_unit">元</string>
    <string name="point_unit">分</string>
    <string name="sale_state_able">立即抢购</string>
    <string name="sale_state_unable">售罄</string>
    <string name="close">关闭</string>
    <string name="foget_pwd_notify">忘记密码？</string>
    <string name="login_phone_number">400-885-7171</string>
    <string name="login_phone_title">且游客服 </string>
    <string name="login_findpwd_code_notify">收不到验证码？联系客服 </string>
    <string name="login_server_title">联系客服</string>
    <string name="login_findpwd_get_code">获取验证码</string>
    <string name="login_findpwd_get_code_params">验证码(%1s)</string>
    <string name="login_loging">登录中...</string>
    <string name="login_begin">登录</string>
    <string name="home_store_title">铺子</string>
    <string name="home_mall_title">商城</string>
    <string name="home_code_title">验码</string>
    <string name="home_manager_title">管理</string>
    <string name="home_setting_title">设置</string>
    <string name="home_person_title">掌柜</string>
    <string name="home_person_score_unit">分</string>
    <string name="home_person_pro_str">%1s\n商品</string>
    <string name="home_person_serv_total_str">%1s\n累计服务</string>
    <string name="home_person_serv_today_str">%1s\n今日服务</string>
    <string name="home_person_notify">如有任何问题，请联系且游客服</string>
    <string name="home_setting_cache_str">%1sM</string>
    <string name="home_setting_version_str">V %1s</string>
    <string name="home_setting_loginout_str">退出登录</string>
    <string name="home_setting_server">且游客户</string>
    <string name="home_setting_feedback">意见反馈</string>
    <string name="home_setting_about">关于且游</string>
    <string name="cache_clean_notify">确定清除缓存吗？</string>
    <string name="setting_loginout_notify">您确定退出登录吗？</string>
    <string name="about_title">关于且游</string>
    <string name="about_network">且游网</string>
    <string name="about_welfare">且游公益</string>
    <string name="about_target">且游目标</string>
    <string name="about_network_value">且游控股集团旗下的旅游O2O创业项目。且游网专注于特卖模式的周边游市场，利用移动互联网手段帮助客栈成为旅游业供应链中的核心企业，为游客提供行中的及时门店服务，满足游客食住行游购娱的一站式需求。\n且游网以旅游目的地为核心，立足于丽江古城，展望全中国，用移动电商的方式连接各旅游产品供应商和服务商，为商户和游客提供个性化的旅游产品定制服务，实现旅游目的地智慧旅游和定制旅游的目的。</string>
    <string name="about_welfare_value">且游旗下的【且游公益】，结合公益助学，公平贸易，打通大学生和旅游目的地客栈，以及贫困山区学校的慈善公益渠道，达到“且游且公益”，的社会效应。</string>
    <string name="about_target_value">且游带你玩透每座城！\n快乐分享健康成长！\n诚信，团队，创新，进取！</string>
    <string name="change_pwd_title">修改登录密码</string>
    <string name="change_pwd_verfy_code_hint">请输入手机验证码</string>
    <string name="change_pwd_verfy_code_get">获取验证码</string>
    <string name="change_pwd_submit">提交</string>
    <string name="change_pwd_new_hint">请输入6-16位字母、数字组合的新密码</string>
    <string name="change_feedback_title">意见反馈</string>
    <string name="change_feedback_fail_notify">反馈内容不能为空</string>
    <string name="change_feedback_hint">有什么想说的，尽管来吐槽吧~</string>
    <string name="home_code_verify">快速验码</string>
    <string name="home_code_submit">提交验证</string>
    <string name="manager_choose_check_type">选择支付方式</string>
    <string name="home_mgr_pro_addedit_exit">确定退出编辑吗？</string>
    <string name="home_mgr_pro_addedit_cancel">取消</string>
    <string name="home_mgr_pro_addedit_done">完成</string>
    <string name="home_mgr_pro_addedit_edit">编辑商品</string>
    <string name="home_mgr_pro_addedit_add">添加商品</string>
    <string name="home_mgr_pro_ae_addpic_title">添加商品图片</string>
    <string name="home_mgr_pro_ae_addpic_title_notify">(至少添加一张主图，图片总数最多30张)</string>
    <string name="home_mgr_pro_ae_proinfo_name">商品名称</string>
    <string name="home_mgr_pro_ae_proinfo_name_length_notify">商品名称长度30字以内</string>
    <string name="home_mgr_pro_ae_proinfo_type">商品类别</string>
    <string name="home_mgr_pro_ae_proinfo_type_hint">请选择类别</string>
    <string name="home_mgr_pro_ae_label_type">标签</string>
    <string name="home_mgr_pro_ae_label_type_hint">请选择标签</string>
    <string name="home_mgr_pro_ae_price_old_price">原价</string>
    <string name="home_mgr_pro_ae_price_hint">请输入价格</string>
    <string name="home_mgr_pro_ae_price_selling_price">售价</string>
    <string name="home_mgr_pro_ae_price_quantity">可售数量</string>
    <string name="home_mgr_pro_ae_price_quantity_hint">请输入可售数量</string>
    <string name="home_mgr_pro_ae_price_deadline">有效期至</string>
    <string name="home_mgr_pro_ae_price_deadline_hint">请选择有效期</string>
    <string name="home_mgr_pro_ae_intor_intro">商品介绍</string>
    <string name="home_mgr_pro_ae_intor_intro_hint">请输入商品介绍</string>
    <string name="home_mgr_pro_ae_intor_parchase">购买须知</string>
    <string name="home_mgr_pro_ae_intor_parchase_hint">请输入购买须知</string>
    <string name="home_mgr_pro_ae_recommend_recm">推荐理由</string>
    <string name="home_mgr_pro_ae_recommend_keyword">商品关键词</string>
    <string name="home_mgr_pro_ae_recommend_word">推荐语</string>
    <string name="home_mgr_pro_ae_recommend_word_notify">描述产品亮点，不超过100字</string>
    <string name="home_mgr_pro_ae_recommend_comment">达人点评</string>
    <string name="home_mgr_pro_ae_recommend_comment_notify">旅行达人点评，不超过100字</string>
    <string name="home_mgr_pro_ae_recommend_travel_comment">旅行达人点评</string>
    <string name="home_mgr_pro_ae_recommend_boss_comment_notify">客栈老板点评，不超过100字</string>
    <string name="home_mgr_pro_ae_recommend_boss_comment">客栈老板点评</string>
    <string name="home_mgr_pro_ae_edit">编辑商品</string>
    <string name="home_mgr_pro_ae_add">添加商品</string>
    <string name="home_mgr_pro_ae_price_str">%1s元</string>
    <string name="home_mgr_pro_ae_keyword_hint">至少添加一个关键词，不超过5个关键词</string>
    <string name="home_mgr_pro_ae_keyword_add">添加关键词</string>
    <string name="home_mgr_pro_ae_keyword_max_str">最多只能添加%1s个关键字</string>
    <string name="home_mgr_pro_ae_need_pics">至少添加一张主图</string>
    <string name="home_mgr_pro_ae_edit_success">编辑商品成功</string>
    <string name="home_mgr_pro_ae_add_success">添加商品成功</string>
    <string name="home_mgr_pro_ae_add_input_notify">请填写完整的资料</string>
    <string name="home_mgr_pro_ae_add_pics_enough_notify">图片总数最多%1s张</string>
    <string name="home_mgr_pro_tag_list_title">选择标签</string>
    <string name="home_mgr_pro_tag_new_title">添加标签</string>
    <string name="home_mgr_pro_tag_list_close">关闭</string>
    <string name="home_mgr_pro_tag_list_new">新建标签</string>
    <string name="home_mgr_pro_tag_new_notify">标签不能为空</string>
    <string name="home_mgr_pro_type_str">%1$s->%2$s</string>
    <string name="store_item_load">正在加载...</string>
    <string name="store_item_price_init">0.00</string>
    <string name="store_item_web_notify">查看详情</string>
    <string name="store_item_price"><Data><![CDATA[<font color="#f85c5c">%1$s</font> 元]]></Data></string>
    <string name="store_item_old_price">%1s元</string>
    <string name="store_indicator_mask_text_str">第%1s页</string>
    <string name="store_item_empty">当前标签下没有任何商品</string>
    <string name="store_go_mall">去商城选货</string>
    <string name="store_add_product">添加自营商品</string>
    <string name="store_sudoku_title">我的铺子</string>
    <string name="mall_cate_id_all">全部</string>
    <string name="mall_submit_order_hint">提交订单</string>
    <string name="mall_product_price_str"><Data><![CDATA[原价: %1$s元　售价: <font color="#f85c5c">%2$s</font> 元]]> </Data></string>
    <string name="mall_product_price_with_tip_str"><Data><![CDATA[原价: %1$s元　售价: <font color="#f85c5c">%2$s</font> 元　小费: <font color="#f85c5c">%3$s</font> 元]]> </Data></string>
    <string name="mall_product_content_htm_str"><Data><![CDATA[<img/><font color="yellow"> 推荐理由 </font>%1$s <p><font color="yellow">%2$s</font> 金钥匙已上架　累计出售 <font color="yellow">%3$s</font> 件</p>]]> </Data> </string>
    <string name="mall_pro_has_shelved">已上架</string>
    <string name="mall_pro_to_shelve">上架到铺子</string>
    <string name="mall_pro_not_shelve">已下架</string>
    <string name="mall_pro_end_time">团购已结束</string>
    <string name="mall_pro_delete_tag">客栈酒店</string>
    <string name="mall_filter_title_1">筛选</string>
    <string name="mall_filter_title_2">排序</string>
    <string name="mall_filter_local_all">筛选</string>
    <string name="mall_filter_sort_default">排序</string>
    <string name="mall_filter_sort_popular">人气最高</string>
    <string name="mall_filter_sort_tip">小费最高</string>
    <string name="mall_filter_sale">售价最低</string>
    <string name="mall_filter_dis">距离最近</string>
    <string name="mall_filter_new">上架时间最近</string>
    <string name="mall_filter_init">筛选/排序</string>
    <string name="pro_detail_view_str">看过　%1s</string>
    <string name="pro_detail_buy_str">买过　%1s</string>
    <string name="detail_attention_title">购买须知</string>
    <string name="detail_detail_title">商品详情</string>
    <string name="detail_intro_title">推荐理由</string>
    <string name="detail_price_str"><Data><![CDATA[ <font color="#ff5d5d">%1s</font> 元]]></Data></string>
    <string name="detail_old_price_str">%1s 元</string>
    <string name="detail_tip_str"><Data><![CDATA[ 小费: <font color="#ff5d5d">%1s</font> 元]]></Data></string>
    <string name="detail_remainders_str">剩余时间: %1s</string>
    <string name="detail_remainders_invalidate">已过期</string>
    <string name="detail_remainders_mins">%1s分钟</string>
    <string name="detail_remainders_hours">%1$s小时%2$s分钟</string>
    <string name="detail_remainders_days">%1$s天%2$s小时</string>
    <string name="detail_remainders_months">%1$s个月%2$s天</string>
    <string name="detail_remainders_years">%1$s年%2$s个月</string>
    <string name="detail_remainders_hours_0">%1$s小时</string>
    <string name="detail_remainders_days_0">%1$s天</string>
    <string name="detail_remainders_months_0">%1$s个月</string>
    <string name="detail_remainders_years_0">%1$s年</string>
    <string name="detail_refund_anytime_str">随时退款</string>
    <string name="detail_refund_overdue_str">过期退款</string>
    <string name="detail_refund_offline_str">线下退换货</string>
    <string name="detail_invoice_str">提供发票</string>
    <string name="detail_score_comments_str">%1s 人 评价</string>
    <string name="detail_comment_title">达人点评</string>
    <string name="detail_comment_tra_tag">旅行达人</string>
    <string name="detail_comment_boss_tag">客栈老板</string>
    <string name="detail_comment_empty">暂无</string>
    <string name="pro_comments_title">评价详情</string>
    <string name="pro_comments_score_title">买家口碑</string>
    <string name="pro_comments_score_commentnum">%1s 条评价</string>
    <string name="pro_comments_empty_notify">暂无评论</string>
    <string name="code_verify_success_notify">验证成功</string>
    <string name="code_verify_success_price"><Data><![CDATA[价格：<font color="#ff5d5d" size="36px">%1s</font> 元　原价:]]></Data></string>
    <string name="code_verify_success_old_price">%1s 元</string>
    <string name="code_verify_input_notify">输入12位有效且游券密码</string>
    <string name="code_verify_input_bad">且游密码券错误！</string>
    <string name="code_verify_success_name">%1$sX%2$s</string>
    <string name="code_verify_success_price_a">价格：</string>
    <string name="code_verify_success_price_c"> 元　原价:</string>
    <string name="town_traver_title">古镇游踪</string>
    <string name="town_traver_backtag">我的铺子</string>
    <string name="update_notify">已检测到新版本，是否更新？</string>
</resources>