<?xml version="1.0" encoding="utf-8"?>
<com.qieyou.qieyoustore.ui.widget.TransLinearlayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77232323"
    android:gravity="center">

    <LinearLayout
        android:layout_width="531dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@drawable/bg_coners_gray_26_top_round">

            <TextView
                android:id="@+id/setting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/home_setting_about"
                style="@style/setting_about_title"
                />

            <TextView
                android:id="@+id/about_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:text="@string/close"
                style="@style/setting_about_close"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_coners_black_15_bottom_round"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/totour_network"
                android:drawablePadding="10dp"
                android:text="@string/about_network"
                style="@style/setting_about_lable"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/about_network_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_network_value"
                style="@style/setting_about_content"
                android:lineSpacingExtra="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tour_welfare"
                android:drawablePadding="10dp"
                android:text="@string/about_welfare"
                style="@style/setting_about_lable"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/about_welfare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_welfare_value"
                style="@style/setting_about_content"
                android:lineSpacingExtra="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tour_welfare"
                android:drawablePadding="10dp"
                android:text="@string/about_target"
                style="@style/setting_about_lable"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/about_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_target_value"
                style="@style/setting_about_content"
                android:lineSpacingExtra="8dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>
    </LinearLayout>
</com.qieyou.qieyoustore.ui.widget.TransLinearlayout>
