<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        >
        <TextView
            android:id="@+id/pro_intro_intro_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:drawableLeft="@drawable/home_mgr_pro_ae_required"
            android:drawablePadding="7dp"
            android:text="@string/home_mgr_pro_ae_intor_intro"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <com.qieyou.qieyoustore.ui.widget.ClearableEditText
            android:id="@+id/pro_intro_intro_value"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="174dp"
            android:layout_marginRight="35dp"
            android:hint="@string/home_mgr_pro_ae_intor_intro_hint"
            android:textColorHint="@color/home_mgr_pro_addedit_title_hint_text"
            android:textColor="@color/home_mgr_pro_ae_text"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/home_mgr_pro_ae_list_item_line"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp">
        <TextView
            android:id="@+id/pro_intro_parchase_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:drawablePadding="7dp"
            android:text="@string/home_mgr_pro_ae_intor_parchase"
            android:layout_centerVertical="true"
            android:layout_marginLeft="35dp"

            />
        <com.qieyou.qieyoustore.ui.widget.ClearableEditText
            android:id="@+id/pro_intro_parchase_value"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="174dp"
            android:layout_marginRight="35dp"
            android:hint="@string/home_mgr_pro_ae_intor_parchase_hint"
            android:textColorHint="@color/home_mgr_pro_addedit_title_hint_text"
            android:drawablePadding="7dp"
            android:textColor="@color/home_mgr_pro_ae_text"
            />
    </RelativeLayout>



</LinearLayout>
