<?xml version="1.0" encoding="utf-8"?>
<com.qieyou.qieyoustore.ui.widget.TransLinearlayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77232323"
    android:orientation="vertical"
    android:gravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/gray_26"
                android:layout_marginTop="27dp"
                >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="25dp"
                android:paddingRight="40dp"
                >
                <EditText
                    android:id="@+id/verfy_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/change_pwd_verfy_code_hint"
                    style="@style/setting_change_hint"
                    android:layout_centerVertical="true"
                    android:inputType="number"
                    />
                <TextView
                    android:id="@+id/change_get_pwd"
                    android:layout_width="163dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_coners_green_stroke_round"
                    android:text="@string/change_pwd_verfy_code_get"
                    style="@style/setting_change_submit"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_line"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                />
            <EditText
                android:id="@+id/change_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/change_pwd_new_hint"
                android:layout_marginLeft="25dp"
                style="@style/setting_change_hint"
                android:background="@null"
                android:inputType="textPassword"
                />
            </LinearLayout>
            <Button
                android:id="@+id/change_submit_new"
                android:layout_width="477dp"
                android:layout_height="54dp"
                android:background="@drawable/store_vp_bottom_unable_bg"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="35dp"
                android:clickable="false"
                android:text="@string/change_pwd_submit"
                style="@style/setting_change_submit"
                />
</com.qieyou.qieyoustore.ui.widget.TransLinearlayout>
