<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <TextView
            android:id="@+id/pro_old_price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:drawableLeft="@drawable/home_mgr_pro_ae_required"
            android:drawablePadding="7dp"
            android:text="@string/home_mgr_pro_ae_price_old_price"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <com.qieyou.qieyoustore.ui.widget.RMBClearableEditText
            android:id="@+id/pro_old_price_value"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="174dp"
            android:layout_marginRight="35dp"
            android:inputType="numberDecimal"
            android:hint="@string/home_mgr_pro_ae_price_hint"
            android:textColorHint="@color/home_mgr_pro_addedit_title_hint_text"
            android:textColor="@color/home_mgr_pro_ae_text"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/home_mgr_pro_ae_list_item_line"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <TextView
            android:id="@+id/pro_selling_price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:drawableLeft="@drawable/home_mgr_pro_ae_required"
            android:drawablePadding="7dp"
            android:text="@string/home_mgr_pro_ae_price_selling_price"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <com.qieyou.qieyoustore.ui.widget.RMBClearableEditText
            android:id="@+id/pro_selling_price_value"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="174dp"
            android:layout_marginRight="35dp"
            android:inputType="numberDecimal"
            android:textColor="@color/home_mgr_pro_ae_text"
            android:hint="@string/home_mgr_pro_ae_price_hint"
            android:textColorHint="@color/home_mgr_pro_addedit_title_hint_text"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/home_mgr_pro_ae_list_item_line"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <TextView
            android:id="@+id/pro_quantity_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:drawableLeft="@drawable/home_mgr_pro_ae_required"
            android:drawablePadding="7dp"
            android:text="@string/home_mgr_pro_ae_price_quantity"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <com.qieyou.qieyoustore.ui.widget.ClearableEditText
            android:id="@+id/pro_quantity_value"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="174dp"
            android:layout_marginRight="35dp"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:hint="@string/home_mgr_pro_ae_price_quantity_hint"
            android:textColorHint="@color/home_mgr_pro_addedit_title_hint_text"
            android:inputType="number"
            android:textColor="@color/home_mgr_pro_ae_text"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/home_mgr_pro_ae_list_item_line"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <TextView
            android:id="@+id/pro_price_deadline_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:drawableLeft="@drawable/home_mgr_pro_ae_required"
            android:drawablePadding="7dp"
            android:text="@string/home_mgr_pro_ae_price_deadline"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:id="@+id/pro_price_deadline_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="77dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="174dp"
            android:layout_marginRight="35dp"
            android:drawablePadding="7dp"
            android:drawableRight="@drawable/home_mgr_pro_info_showtrangle"
            android:textSize="@dimen/home_mgr_pro_ae_proinfo_size"
            android:textColor="@color/home_mgr_pro_ae_text"
            android:hint="@string/home_mgr_pro_ae_price_deadline_hint"
            android:textColorHint="@color/home_mgr_pro_addedit_title_hint_text"
            />
    </RelativeLayout>


</LinearLayout>
